--- a/_posts/2019-07-11-the-us-narrative-today.html
+++ b/_posts/2019-07-11-the-us-narrative-today.html
@@ -2646,107 +2646,107 @@ stories:
   domain: http://www.sonorannews.com/
   link: http://sonorannews.com/2019/07/10/nike-too-big-to-fail/
 images:
-- name: liberty-back-statue-liberty-back-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-light-dali.jpg
-- name: eduardo-eduardo-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-alien-goggles.jpg
-- name: subway-subway-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-monet-one.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
-- name: downtheline-downtheline-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colored-circuits.jpg
-- name: store-on-corner-store-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-smooth-ride.jpg
-- name: udnie-IMG_4753.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4753.jpg
-- name: statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
-- name: carry-load-carryload-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-pablo-blue.jpg
-- name: castle-wall-DSC-0067-deep-connections.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-deep-connections.JPG
-- name: downtown-trucksilo-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-ww2-dresden.jpg
-- name: gypsymosaic-gypsy-eyes-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dry-skin.jpg
-- name: bluelake-dry-skin-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dry-skin-file-00-01-17-38.jpg
-- name: powerlines-power-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-sunday.jpg
-- name: paris-paris-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-sand-paper.jpg
-- name: paris-paris-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-wols.jpg
-- name: mistywoods-babyfoot-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-colorful-blocks.jpg
-- name: store-on-corner-oldcabin-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-three.jpg
-- name: machine-road-machine-road-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-space-pizza.jpg
-- name: status-berlin-status-berlin-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-plentiful.jpg
-- name: copper-circuit-IMG_7559.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7559.jpg
-- name: dragon-desert-desert-dragon-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-graham-sutherland.jpg
-- name: oldbarn-oldbarn-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-kand-two.jpg
-- name: gypsy-wagon-gypsywagon-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-plentiful.jpg
-- name: berlinwall2-berlinwall-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-neo-instinct.jpg
-- name: locked-up-steam-lock-up-steam-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-rainbow-festival.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-circuit-5.jpg
-- name: oldcabin-oldcabin-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-dali.jpg
-- name: old-granary-field-oldhouse-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-ww2-dresden.jpg
-- name: downtheline-downtheline-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-ww2-color.jpg
-- name: beach-rocks-beach-rocks-currents-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-gan-vogh.jpg
-- name: white-house-lawn-white-house-window-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-monet-one.jpg
-- name: aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-christianity-under-construction-atari-asteroids.jpg
-- name: razorcliff-razorcliff-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-bright-sand.jpg
-- name: oldsmallboat-oldsmallboat-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-yellow-collage.jpg
-- name: art-museum-art-museum-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-constitution.jpg
-- name: berlinwall-DSC-0084-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-blue-granite.jpg
-- name: carry-load-carryload-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-smoking-cigarette.jpg
-- name: status-berlin-status-berlin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gan-vogh.jpg
-- name: gears-4882162452-fa3126b38d-b-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-really-hot.jpg
-- name: oldcabin-store-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-crunch-paper.jpg
-- name: store-on-corner-store-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-constitution.jpg
-- name: catacombs-catacombs-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-spagetti-accident.jpg
-- name: yosemite-yosemite-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-marcel-duchamp.jpg
-- name: old-barn-old-barn-1500-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-dali.jpg
-- name: machine-road-machine-road-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dali-three.jpg
-- name: fence-mexico-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-ww2-dresden.jpg
-- name: server-cloud-server-racks-clouds-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-propaganda-leaflets.jpg
-- name: udnie-IMG_E3643.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_E3643.jpg
-- name: machine-road-machine-road-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit.jpg
-- name: oldhotel-oldhotel-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-yellow-paper.jpg
+- name: adam-smith-adam-smith-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-dali.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+- name: stories-downtown-fredericksburg-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-feed-people.JPG
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-mucha-mult.jpg
+- name: razorcliff-razorcliff-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colorful-dream.jpg
+- name: downtheline-downtheline-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-sunday.jpg
+- name: miamibeach-miamibeach-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-umberto-bocc.jpg
+- name: old-house-oldhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colorful-dream.jpg
+- name: docks-docks-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-matrix.jpg
+- name: blossombar-colorful-dream-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-00-00.jpg
+- name: old-house-oldhouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dali-three.jpg
+- name: status-berlin-status-berlin-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-kand-two.jpg
+- name: stories-internet-gauages-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-internet-gauages-3.jpg
+- name: downtown-trucksilo-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-brush.jpg
+- name: castle-wall-DSC-0067-umberto-bocc.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-umberto-bocc.JPG
+- name: stories-new-52-175-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-52-175-800-500-0-max-0-1--1.jpg
+- name: powerlines-power-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-creativity.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit-4.jpg
+- name: aws-s3-stories-statue-face-open-mouth-blue-circuit-5.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-blue-circuit-5.png
+- name: blossombar-crafty-painting-file-00-00-50-08.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-08.jpg
+- name: amusement-park-amusement-park-2-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-satan-red.jpg
+- name: amusement-park-amusement-park-2-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-purple-storm.jpg
+- name: old-church-oldchurch-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-alien-goggles.jpg
+- name: razorwire-DSC-0080-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-circuit.jpg
+- name: death-valley-death-valley-national-park-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kandinsky-bv.jpg
+- name: meadowbutterfly-meadow-butterfly-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-crabapple.jpg
+- name: yuma-bank-yuma-bak-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit.jpg
+- name: oldroad-old-road-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-pablo-blue.jpg
+- name: crow_matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_matrix.jpg
+- name: cargo-ship-cargo-ship-on-sea-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-atari-missle.jpg
+- name: rain-princess-IMG_4833.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_4833.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-emily-carr.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-emily-carr.png
+- name: white-house-lawn-white-house-window-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-hot-spicy.jpg
+- name: windowmountain-window-mountain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dry-skin.jpg
+- name: border-crossing-bordercrossing-neo-instinct.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-neo-instinct.png
+- name: windowmountain-window-mountain-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-colored-circuits.jpg
+- name: mosaic-face-mosaic-face-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-storm.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-electricity.jpg
+- name: old-barn-old-barn-1500-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colorful-dream.jpg
+- name: server-cloud-server-racks-clouds-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-marcel-duchamp.jpg
+- name: razorwire-DSC-0080-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-post-modern.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
+- name: nyc-flag-nycflag-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-spagetti-accident.jpg
+- name: abandonedbuildings_far_away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_far_away.jpg
+- name: oldhousecars-house-old-cars-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dark-soul.jpg
+- name: downtown-street-view-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-street-view-nazi-invasion.jpg
+- name: beach-rocks-beach-rocks-currents-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-green-zuma.jpg
+- name: walled-garden-walled-garden-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-post-modern.jpg
+- name: supreme-court-supremecourt-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-really-hot.jpg
+- name: border-crossing-bordercrossing-post-modern.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-post-modern.png
 ---
 Flight Training Center Plans Major Investment.&nbsp;Swim Practices Open To Newcomers.&nbsp;Louisiana Braces For Possible Weekend Hurricane.&nbsp;Alaska Legislature Fails To Override Vetoes That Prompt Cuts.&nbsp;Villages Vet Elected To National Office.&nbsp;Flooding Swamps New Orleans; Possible Hurricane Coming Next.&nbsp;Public Meetings In The Logansport Area.&nbsp;Coroners Raise New Concerns After July Overdose Death Spike.&nbsp;
